# reactos

./: CMakeLists.txt
boot/bootdata/: hivesft.inf  hivesys.inf
boot/bootdata/bootcd/: unattend.inf
dll/apisets/: CMakeLists.txt  api-ms-win-core-winrt-l1-1-0.spec  api-ms-win-crt-math-l1-1-0.spec  api-ms-win-crt-private-l1-1-0.spec  api-ms-win-crt-runtime-l1-1-0.spec  api-ms-win-crt-stdio-l1-1-0.spec  api-ms-win-crt-string-l1-1-0.spec
dll/directx/wine/: CMakeLists.txt
dll/ntdll/: CMakeLists.txt
dll/ntdll/def/: ntdll.spec
dll/ntdll/include/: ntdll.h
dll/ntdll/nt_0600/: ntdll_vista.spec
dll/win32/: CMakeLists.txt
dll/win32/dbghelp/: compat.h  dbghelp.c  dbghelp_private.h  elf_module.c  macho_module.c  module.c  path.c  symbol.c
dll/win32/dwmapi/: manage.c
dll/win32/kernel32/: CMakeLists.txt  kernel32.spec
dll/win32/mshtml/: omnavigator.c
dll/win32/msvcr70/: CMakeLists.txt  msvcr70.spec
dll/win32/msvcrt/: CMakeLists.txt  cpprt.s  float.h  math.c  msvcrt.h  msvcrt.spec  stubs.c
dll/win32/psapi/: psapi.spec
dll/win32/rpcrt4/: rpc_binding.c
media/doc/: 3rd Party Files.txt
media/inf/: syssetup.inf
ntoskrnl/: ntos.cmake  ntoskrnl.spec
ntoskrnl/cache/: newcc.h
ntoskrnl/cc/: copy.c  fs.c  lazywrite.c  pin.c  view.c
ntoskrnl/ex/: init.c  resource.c  sysinfo.c
ntoskrnl/include/: ntoskrnl.h
ntoskrnl/mm/: balance.c  freelist.c  marea.c  pagefile.c  rmap.c  section.c
ntoskrnl/ob/: oblife.c
ntoskrnl/po/: power.c
ntoskrnl/se/: accesschk.c  audit.c  token.c
sdk/cmake/: baseaddress_msvc.cmake
win32ss/include/: ntuser.h
(+72 files in other folders)
